[package]
name = "bcal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bcal"
path = "src/main.rs"

[dependencies]
brightdate = { path = "../brightdate" }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
