[package]
name = "btime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "btime"
path = "src/main.rs"

[dependencies]
brightdate = { path = "../brightdate" }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
