[package]
name = "btime"
description = "BrightDate time(1) — measure command execution time using BrightDate units"
keywords = ["time", "benchmark", "cli", "brightdate", "profiling"]
categories = ["command-line-utilities", "date-and-time"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "btime"
path = "src/lib.rs"

[[bin]]
name = "btime"
path = "src/main.rs"

[dependencies]
brightdate = { path = "../brightdate", version = "0.1.4" }
bdate = { path = "../bdate", version = "0.1.4" }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
