[package]
name = "bwatch"
description = "BrightDate watch(1) — execute a command periodically using BrightDate intervals"
keywords = ["watch", "cli", "brightdate", "interval", "monitor"]
categories = ["command-line-utilities", "date-and-time"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "bwatch"
path = "src/lib.rs"

[[bin]]
name = "bwatch"
path = "src/main.rs"

[dependencies]
brightdate = { path = "../brightdate", version = "0.1.3" }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
